# semaphore_r0

./: .env  Cargo.toml  README.md
host/: Cargo.toml
host/src/: main.rs
merkletree/: Cargo.toml
merkletree/src/: lib.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
